package com.mycompany.zoo2aplication.zoo;

public enum AnimalType {
    REPTILE,
    BIRD,
    MAMMAL,
    FISH
}
