package com.mycompany.zoo2aplication.zoo;

public interface SwimmingBehavior {
    void swim();
}

